# gdstk

./: .gitignore  CMakeLists.txt  gdstk_build.md  vcpkg.json
c/include/c_include/: library_c.h
docs/c/: CMakeLists.txt  some_c_file.c
docs/cpp/: CMakeLists.txt
include/c_include/: array_c.h  cell_c.h  library_c.h  polygon_c.h  reference_c.h
src/: CMakeLists.txt  clipper_tools.cpp  library.cpp
src/c_src/: Needed_apis.md  Wrapping C++ with C.md  array_c.cpp  cell_c.cpp  library_c.cpp  polygon_c.cpp  reference_c.cpp
